--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio-db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://bfuglkvccxgkjk2ktrtt-mysql.services.clever-cloud.com:3306/bfuglkvccxgkjk2ktrtt?useSSL=false&serverTimezone=UTC
+spring.datasource.username=ujazype9skkwp1kh
+spring.datasource.password=tNvuVGwSuTisp6fOC12g
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
