--- a/portfolio/Dockerfile
+++ b/portfolio/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:8
+FROM amazoncorretto:8-alpine-jdk
 MAINTAINER diegovilca
 COPY target/portfolio-0.0.1-SNAPSHOT.jar portfolio-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/portfolio-0.0.1-SNAPSHOT.jar"]
